// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextEditor hides toolbar when editor blurs 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    onBlur={[Function]}
    onFocus={[Function]}
    onInputChange={[Function]}
    onLoad={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`RichTextEditor renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    onBlur={[Function]}
    onFocus={[Function]}
    onInputChange={[Function]}
    onLoad={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`RichTextEditor renders toolbar when editor focused 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    onBlur={[Function]}
    onFocus={[Function]}
    onInputChange={[Function]}
    onLoad={[Function]}
  />
  <RichTextToolbar
    active={Array []}
    insertLink={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`RichTextEditor should update active editor items in toolbar 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    onBlur={[Function]}
    onFocus={[Function]}
    onInputChange={[Function]}
    onLoad={[Function]}
  />
  <RichTextToolbar
    active={
      Array [
        "italic",
      ]
    }
    insertLink={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`RichTextEditor should update active editor items in toolbar 2`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <ZSSRichTextEditor
    _setMock={[Function]}
    editorItemsChanged={[Function]}
    html=""
    onBlur={[Function]}
    onFocus={[Function]}
    onInputChange={[Function]}
    onLoad={[Function]}
  />
  <RichTextToolbar
    active={
      Array [
        "bold",
      ]
    }
    insertLink={[Function]}
    redo={[Function]}
    setBold={[Function]}
    setItalic={[Function]}
    setOrderedList={[Function]}
    setTextColor={[Function]}
    setUnorderedList={[Function]}
    undo={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;
